# OpenBachelorS

./: .gitignore  Makefile  README.md  build_exe.ps1  distclean.cmd  pyproject.toml  requirements.txt  res_lock  res_locker.cmd  run_dev.cmd  run_dev.sh  setup-termux.sh  setup.cmd  start-asset-downloader-win.cmd  start-asset-downloader.cmd  start-console.cmd  start-dev.cmd  start-prod.cmd
.github/workflows/: build_win.yml  update.yml
conf/: config.json  version.json  version_2461.json  version_en.json  version_windows.json
data/: crisisV2_tmpl.json  gacha_data.json  gacha_data_en.json  rlv2_data.json  rlv2_tmpl.json  sandbox_tmpl.json  tmpl.json
data/crisisV2/: crisis_v2_season_4_1.json  crisis_v2_season_5_1.json
doc/: how_to_use_console.md
link/: game.txt  ld14.txt  mumu12.txt  mumu15.txt  pc_game.txt
perf/: account_syncData.js  shop_getSkinGoodList.js
res/excel/: campaign_table.json  chapter_table.json  char_master_table.json  char_meta_table.json  char_patch_table.json  charm_table.json  climb_tower_table.json  crisis_v2_table.json  display_meta_table.json  enemy_handbook_table.json  gacha_table.json  gamedata_const.json  hotupdate_meta_table.json  init_text.json  item_table.json  main_text.json  medal_table.json  mission_table.json  open_server_table.json  range_table.json  replicate_table.json  sandbox_perm_table.json  shop_client_table.json  skin_table.json  special_operator_table.json  story_review_meta_table.json  story_table.json  (+4 more)
src/: app.py
test/: conftest.py  test_db.py  test_download_file.py  test_helper.py  test_mod.py  test_player_data.py
(+113 files in other folders)
